--- a/devops/values/integrations/fly.yaml
+++ b/devops/values/integrations/fly.yaml
@@ -15,13 +15,13 @@ chatTopic: &topic chat-events
 stateTopic: &statetopic vlab-state
 responseTopic: &responsetopic vlab-response
 paymentTopic: &paymenttopic vlab-payment
-kafkabrokers: &kb fly-kafka:9092
+kafkabrokers: &kb kafka:9092
 botEnvs: &botenvs bot-envs
 chatbaseHost: &host db-cockroachdb-public
 
 
 versionDashboard: &vdashboard v0.0.31
-versionBotserver: &vbotserver v0.0.10
+versionBotserver: &vbotserver 0.0.9
 versionReplybot: &vreplybot v0.0.141
 versionLinksniffer: &vlinksniffer v0.0.4
 versionDean: &vdean v0.0.25
@@ -175,7 +175,6 @@ dashboard:
     port: 80
 
 
-
 replybot:
   replicaCount: 1
   image:
@@ -205,7 +204,7 @@ replybot:
   - name: REPLYBOT_EVENT_TOPIC
     value: *topic
   - name: FACEBOOK_GRAPH_URL
-    value: "http://fly-facebot"
+    value: "http://gbv-facebot"
   - name: BOTSPINE_KAFKA_BROKERS
     value: *kb
   - name: KAFKA_BROKERS
@@ -359,64 +358,9 @@ scribble:
 
 
 cockroachdb:
+  # disable cockroachdb as we run it as a service
   enabled: false
-  image:
-    tag: v21.1.9
-  statefulset:
-    replicas: 1
-    args:
-      - --insecure 
-  conf:
-    single-node: true
-    budget:
-      maxUnavailable: 0
-  tls:
-    enabled: false
-  resources:
-    requests:
-      cpu: 25m
-      memory: 256Mi
-  storage:
-    persistentVolume:
-      size: 1Gi
 
 kafka:
-  resources:
-    requests:
-      cpu: 25m
-      memory: 200Mi
-  zookeeper:
-    resources:
-      requests:
-        cpu: 5m
-        memory: 50Mi
-  heapOpts: "-Xmx500M -Xms500M"
-  autoCreateTopicsEnable: false
-  defaultReplicationFactor: 1
-  offsetsTopicReplicationFactor: 1
-  persistence:
-    size: 1Gi
-  provisioning:
-    enabled: true
-    topics:
-      - name: *topic
-        partitions: 6
-        replicationFactor: 1
-        config:
-          # 14 days
-          retention.ms: "1209600000"
-      - name: *statetopic
-        partitions: 6
-        replicationFactor: 1
-        config:
-          retention.ms: "1209600000"
-      - name: *responsetopic
-        partitions: 6
-        replicationFactor: 1
-        config:
-          retention.ms: "1209600000"
-      - name: *paymenttopic
-        partitions: 2
-        replicationFactor: 1
-        config:
-          retention.ms: "1209600000"
+  # disable kafka as we run it as a service
+  enabled: false
