--- a/facebot/kube/job.yaml
+++ b/facebot/kube/job.yaml
@@ -1,18 +1,18 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: gbv-testrunner
+  name: testrunner
   labels:
-    app: gbv-testrunner
+    app: testrunner
 spec:
   template:
     metadata:
       labels:
-        app: gbv-testrunner
+        app: testrunner
     spec:
       restartPolicy: "Never"
       containers:
-      - name: gbv-testrunner
+      - name: testrunner
         image: localhost:5000/testrunner:registry
         imagePullPolicy: Always
         resources:
@@ -23,12 +23,12 @@ spec:
         - containerPort: 88
         envFrom:
         - secretRef:
-            name: gbv-bot-envs
+            name: bot-envs
         env:
         - name: BOTSERVER_URL
-          value: "http://gbv-botserver"
+          value: "http://fly-botserver"
         - name: KAFKA_BROKERS
-          value: "gbv-kafka:9092"
+          value: "kafka:9092"
         - name: CHATBASE_BACKEND
           value: "@vlab-research/chatbase-postgres"
         - name: CHATBASE_DATABASE
@@ -38,6 +38,6 @@ spec:
         - name: CHATBASE_PASSWORD
           value: ""
         - name: CHATBASE_HOST
-          value: "gbv-cockroachdb-public.default"
+          value: "db-cockroachdb-public"
         - name: CHATBASE_PORT
           value: "26257"
