chore: update staging cockroachdb to v21.1.9
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/devops/Makefile
+++ b/devops/Makefile
@@ -2,7 +2,7 @@ DB_VERSION=v21.1.9
 PORT=5432
 DATABASE=chatroach
 
-dev: create-kind-cluster setup-dev-secret setup-kind-registry bootstrap-fly
+dev: create-kind-cluster create-dev-secret setup-kind-registry bootstrap-fly
 
 start-testrunner:
 	@kubectl apply -f testing/facebot.yaml
@@ -25,7 +25,7 @@ integration-tests:	create-integration-secret bootstrap-fly start-testrunner
 	$(MAKE) check-test-status
 
 create-kind-cluster:
-	@kind create cluster --config dev/kind-cluster.yaml
+	@kind create cluster --config dev/kind-cluster.yaml || true
 
 create-integration-secret:
 	@kubectl create secret generic bot-envs --from-env-file=./testing/.test-env || true
@@ -52,3 +52,56 @@ test-db:
 		--net=host \
 		--rm cockroachdb/cockroach:$(DB_VERSION) \
 		sql --insecure --host localhost --port $(PORT) --database chatroach
+
+kafka-producer:
+	@echo "Starting Kafka Client Pod"
+	@echo "NOTE:                                             "
+	@echo "once started you will just have an flashing cursor"
+	@echo "each time you hit enter a message will be sent to "
+	@echo "kafka on the topic - $(KAFKA_TOPIC)               "
+	@echo "=================================================="
+	@docker run -i \
+		--rm \
+		--network=host \
+		confluentinc/cp-kafka:$(KAFKA_CLIENT_VERSION) \
+		kafka-console-producer \
+		--broker-list $(KAFKA_HOST):30092 --topic $(KAFKA_TOPIC)
+
+.PHONY: cockroach-client
+cockroach-client:
+	@kubectl run -it \
+  	--rm cockroach-client \
+  	--image=cockroachdb/cockroach:v2.1.4 \
+  	--restart=Never \
+  	--command -- ./cockroach sql --insecure --host gbv-cockroachdb-public
+
+# This is used to align your local DNS resolver to be synced with the dev
+# NOTE: Needs to be run with Sudo
+setup-local-networking: clean-local-networking
+	@echo "WARN: adding new DNS entries to $(HOST_FILE), this needs sudo permission"
+	@echo "127.0.0.1  $(KAFKA_HOST)" >> $(HOST_FILE)
+	@echo "127.0.0.1  $(MINIO_HOST)" >> $(HOST_FILE)
+	@echo "127.0.0.1  $(DASHBOARD_HOST)" >> $(HOST_FILE)
+	@echo "127.0.0.1  $(COCKROACHDB_HOST)" >> $(HOST_FILE)
+	@echo "Updated $(HOST_FILE) successfully"
+
+
+
+clean-local-networking:
+	@echo "WARN: cleaning up previous hosts, this needs sudo permission"
+	@sed -ie "/[[:space:]]$(KAFKA_HOST)/d" $(HOST_FILE)
+	@sed -ie "/[[:space:]]$(MINIO_HOST)/d" $(HOST_FILE)
+	@sed -ie "/[[:space:]]$(DASHBOARD_HOST)/d" $(HOST_FILE)
+	@sed -ie "/[[:space:]]$(COCKROACHDB_HOST)/d" $(HOST_FILE)
+	@echo "Updated $(HOST_FILE) successfully"
+
+certs:
+	@echo "Generating certificates for *.local domains"
+	@mkdir -p tmp/certs/
+	@mkcert -key-file tmp/certs/key.pem -cert-file tmp/certs/cert.pem *.fly.local
+
+certs-secret:
+	@kubectl delete secret local-certs || true
+	@kubectl create secret tls local-certs \
+		--cert=tmp/certs/cert.pem \
+		--key=tmp/certs/key.pem
