--- a/devops/vlab/templates/topics.yaml
+++ b/devops/vlab/templates/topics.yaml
@@ -3,6 +3,8 @@
 apiVersion: kafka.banzaicloud.io/v1alpha1
 kind: KafkaTopic
 metadata:
+  annotations:
+    managedBy: koperator
   name: {{ $.Release.Name }}-topic-{{ .name }}
   namespace: default
 spec:
