--- a/devops/values/production.yaml
+++ b/devops/values/production.yaml
@@ -18,7 +18,7 @@ botEnvs: &botenvs gbv-bot-envs
 chatbaseHost: &host "gbv-cockroachdb-public"
 exporterTopic: &exportertopic "vlab-exports"
 
-versionDashboard: &vdashboard v0.0.31
+versionDashboard: &vdashboard v0.0.32
 versionBotserver: &vbotserver v0.0.10
 versionReplybot: &vreplybot v0.0.141
 versionLinksniffer: &vlinksniffer v0.0.4
@@ -392,6 +392,10 @@ dashboard:
       value: 'https://app.vlab.digital/surveys/auth'
     - name: FACEBOOK_GRAPH_URL
       value: 'https://graph.facebook.com/v9.0'
+    - name: KAFKA_BROKERS
+      value: *kb
+    - name: KAFKA_EXPORTS_TOPIC
+      value: *exportertopic
 
   resources:
     requests:
