feat: Exporter takes options for formatting
- Adding ExporterOptions to exporter for pivoting and formatting
- Bumped Python to 3.11
- Used relative imports and added entrypoint main.py

--- a/exporter/Dockerfile
+++ b/exporter/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python:3.11-slim
 
 WORKDIR /app
 
@@ -8,4 +8,4 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-ENTRYPOINT ["python", "exporter/main.py"]
+ENTRYPOINT ["python", "main.py"]
