--- a/dashboard-client/netlify.toml
+++ b/dashboard-client/netlify.toml
@@ -1,15 +1,21 @@
+[[redirects]]
+  from = "https://app.vlab.digital"
+  to = "https://fly.vlab.digital"
+  status = 301
+  force = true
+
 [context.production.environment]
-REACT_APP_SERVER_URL="https://gbv-dashboard.nandan.cloud"
-REACT_APP_TYPEFORM_REDIRECT_URL="https://app.vlab.digital/surveys/auth"
-REACT_APP_AUTH0_CALLBACK_URL="https://app.vlab.digital/auth"
-REACT_APP_URL="https://app.vlab.digital"
-REACT_APP_FACEBOOK_APP_ID="699455733740842"
-REACT_APP_FACEBOOK_GRAPH_VERSION="14.0"
+  REACT_APP_SERVER_URL="https://gbv-dashboard.nandan.cloud"
+  REACT_APP_TYPEFORM_REDIRECT_URL="https://fly.vlab.digital/surveys/auth"
+  REACT_APP_AUTH0_CALLBACK_URL="https://fly.vlab.digital/auth"
+  REACT_APP_URL="https://fly.vlab.digital"
+  REACT_APP_FACEBOOK_APP_ID="699455733740842"
+  REACT_APP_FACEBOOK_GRAPH_VERSION="14.0"
 
 [context.staging.environment]
-REACT_APP_SERVER_URL="https://gbv-dashboard-staging.nandan.cloud"
-REACT_APP_TYPEFORM_REDIRECT_URL="https://staging--vlab-research.netlify.app/surveys/auth"
-REACT_APP_AUTH0_CALLBACK_URL="https://staging--vlab-research.netlify.app/auth"
-REACT_APP_URL="https://staging--vlab-research.netlify.app"
-REACT_APP_FACEBOOK_APP_ID="790352681363186"
-REACT_APP_FACEBOOK_GRAPH_VERSION="14.0"
+  REACT_APP_SERVER_URL="https://gbv-dashboard-staging.nandan.cloud"
+  REACT_APP_TYPEFORM_REDIRECT_URL="https://staging--vlab-research.netlify.app/surveys/auth"
+  REACT_APP_AUTH0_CALLBACK_URL="https://staging--vlab-research.netlify.app/auth"
+  REACT_APP_URL="https://staging--vlab-research.netlify.app"
+  REACT_APP_FACEBOOK_APP_ID="790352681363186"
+  REACT_APP_FACEBOOK_GRAPH_VERSION="14.0"
