--- a/devops/values/production.yaml
+++ b/devops/values/production.yaml
@@ -26,7 +26,7 @@ versionDean: &vdean v0.0.26
 versionScribble: &vscribble v0.0.22-temp-fix
 versionDinersclub: &vdinersclub v0.0.26
 versionFormcentral: &vformcentral v0.0.10
-versionExporter: &vexporter v0.2.0
+versionExporter: &vexporter v0.2.2
 
 processingAlerts:
   - consumergroup: replybot
@@ -390,7 +390,7 @@ dashboard:
     - name: FORMCENTRAL_URL
       value: 'http://gbv-formcentral'
     - name: TYPEFORM_REDIRECT_URL
-      value: 'https://app.vlab.digital/surveys/auth'
+      value: 'https://fly.vlab.digital/surveys/auth'
     - name: FACEBOOK_GRAPH_URL
       value: 'https://graph.facebook.com/v9.0'
     - name: KAFKA_BROKERS
@@ -527,7 +527,7 @@ exporter:
   env:
     - name: "KAFKA_TOPIC"
       value: *exportertopic
-    - name: "KAFKA_SERVERS"
+    - name: "KAFKA_BROKERS"
       value: *kb
     - name: "KAFKA_GROUP_ID"
       value: "exporter"
