--- a/devops/values/staging.yaml
+++ b/devops/values/staging.yaml
@@ -17,12 +17,12 @@ botEnvs: &botenvs gbv-bot-envs
 chatbaseHost: &host "gbv-cockroachdb-public"
 exporterTopic: &exportertopic "vlab-staging-exports"
 
-versionDashboard: &vdashboard latest
+versionDashboard: &vdashboard v0.0.33
 versionBotserver: &vbotserver v0.0.10
-versionReplybot: &vreplybot v0.0.141
+versionReplybot: &vreplybot v0.0.144
 versionLinksniffer: &vlinksniffer v0.0.4
-versionDean: &vdean latest
-versionScribble: &vscribble v0.0.21
+versionDean: &vdean v0.0.26
+versionScribble: &vscribble v0.0.23
 versionDinersclub: &vdinersclub v0.0.26
 versionFormcentral: &vformcentral v0.0.10
 versionExporter: &vexporter latest
