--- a/scribble/Dockerfile
+++ b/scribble/Dockerfile
@@ -1,27 +1,21 @@
-FROM golang:alpine AS build
-RUN sed -i -e 's/v[[:digit:]]\..*\//edge\//g' /etc/apk/repositories
-RUN apk upgrade --update-cache --available
+FROM golang:alpine3.18 AS build
 RUN apk add --no-cache \
         gcc \
         libc-dev \
-        librdkafka-dev=1.9.2-r0 \
+        librdkafka-dev=2.1.1-r0 \
         pkgconf
 RUN mkdir /app
 WORKDIR /app
 
-ADD go.mod .
-ADD go.sum .
+COPY go.mod .
+COPY go.sum .
 RUN go mod download
-ADD . /app/
+COPY . /app/
 RUN go build -tags dynamic -a -o main .
 
 
-FROM alpine
-RUN sed -i -e 's/v[[:digit:]]\..*\//edge\//g' /etc/apk/repositories
-RUN apk upgrade --update-cache --available
-
-RUN apk add --no-cache \
-        librdkafka-dev=1.9.2-r0
+FROM alpine:3.18
+RUN apk add --no-cache librdkafka-dev=2.1.1-r0
 WORKDIR /app
 COPY --from=build /app/main /app/
 CMD ["/app/main"]
