--- a/dinersclub/Dockerfile.dev
+++ b/dinersclub/Dockerfile.dev
@@ -1,10 +1,10 @@
-FROM golang:alpine3.16
-
+FROM golang:alpine3.18
 RUN apk add --no-cache \
-    gcc \
-    libc-dev \
-    librdkafka-dev=1.8.2-r0 --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community \
-    readline-dev
+        gcc \
+        libc-dev \
+        librdkafka-dev=2.1.1-r0 \
+        pkgconf
+
 
 RUN mkdir /app
 COPY go.mod /app
