--- a/exporter/Dockerfile
+++ b/exporter/Dockerfile
@@ -1,10 +1,22 @@
 FROM python:3.11-slim
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY requirements.txt .
+RUN apt-get update && \
+    apt-get install --yes \
+    curl \
+    git
 
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip
+
+RUN curl -sSL https://install.python-poetry.org | python3 -
+
+ENV PATH="/root/.local/bin:$PATH"
+
+RUN poetry config virtualenvs.create false
+COPY poetry.lock pyproject.toml ./
+
+RUN poetry install --only main
 
 COPY . .
 
