--- a/dashboard-client/netlify.toml
+++ b/dashboard-client/netlify.toml
@@ -11,7 +11,7 @@
 
 
 [context.production.environment]
-  REACT_APP_SERVER_URL="https://gbv-dashboard.nandan.cloud"
+  REACT_APP_SERVER_URL="https://fly-dashboard-api.vlab.digital"
   REACT_APP_TYPEFORM_REDIRECT_URL="https://fly.vlab.digital/surveys/auth"
   REACT_APP_AUTH0_CALLBACK_URL="https://fly.vlab.digital/auth"
   REACT_APP_URL="https://fly.vlab.digital"
@@ -19,7 +19,7 @@
   REACT_APP_FACEBOOK_GRAPH_VERSION="17.0"
 
 [context.staging.environment]
-  REACT_APP_SERVER_URL="https://gbv-dashboard-staging.nandan.cloud"
+  REACT_APP_SERVER_URL="https://staging.fly-dashboard-api.vlab.digital"
   REACT_APP_TYPEFORM_REDIRECT_URL="https://staging--vlab-research.netlify.app/surveys/auth"
   REACT_APP_AUTH0_CALLBACK_URL="https://staging--vlab-research.netlify.app/auth"
   REACT_APP_URL="https://staging--vlab-research.netlify.app"
