--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,21 @@ version: 2
 jobs:
   test_dinersclub:
     machine:
-      image: ubuntu-2204:2022.04.1
+      image: default
     steps:
       - checkout
       - run:
           command: ./test.sh dinersclub --is-ci
   test_formcentral:
     machine:
-      image: ubuntu-2204:2022.04.1
+      image: default
     steps:
       - checkout
       - run:
           command: ./test.sh formcentral --is-ci
   test_e2e:
     machine:
-      image: ubuntu-2204:2022.04.1
+      image: default
     resource_class: large
     steps:
       - checkout
@@ -45,7 +45,7 @@ jobs:
           # default timout of 10 mins. This is for some buffer
           no_output_timeout: 30m
           command: cd devops && make integration-tests
-      
+
 workflows:
   version: 2
   test:
