--- a/replybot/package.json
+++ b/replybot/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@vlab-research/botspine": "0.0.12",
     "@vlab-research/chatbase-postgres": "^0.0.6",
-    "@vlab-research/translate-typeform": "^0.1.1",
+    "@vlab-research/translate-typeform": "^0.1.2",
     "@vlab-research/utils": "0.0.11",
     "cacheman": "^2.2.1",
     "chrono-node": "^1.3.11",
@@ -33,6 +33,8 @@
     "r2": "^2.0.1"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.10",
     "chai": "^4.1.2",
     "dotenv": "^6.2.0",
     "eslint": "^6.8.0",
@@ -40,6 +42,7 @@
     "nock": "^10.0.6",
     "nodemon": "^1.17.5",
     "nyc": "^13.3.0",
-    "sinon": "^7.2.3"
+    "sinon": "^7.2.3",
+    "typescript": "^5.7.3"
   }
 }
