--- a/facebot/testrunner/package.json
+++ b/facebot/testrunner/package.json
@@ -6,8 +6,10 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --colors test.js --exit",
-    "lint": "eslint ."
+    "build": "tsc",
+    "test": "mocha --colors dist/test.js --exit",
+    "lint": "eslint . --ext .ts",
+    "dev": "tsc --watch"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +28,16 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^7.8.1"
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/mustache": "^4.2.0",
+    "@types/node": "^18.0.0",
+    "@types/pg": "^8.6.0",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^7.8.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.5.0"
   }
 }
