feat(replybot): migrate StateStore from cacheman to Redis
- Replace in-memory cacheman with Redis using ioredis
- Add environment variable support for Redis connection (REDIS_HOST, REDIS_PORT, REDIS_PASSWORD, REDIS_DB)
- Use parse-duration library for robust TTL parsing with support for complex formats
- Add comprehensive test suite with mocked Redis client
- Support 0 TTL for no expiration scenarios
- Add Docker Compose configuration with Redis service
- Maintain backward-compatible API
- Add detailed documentation for migration and usage

BREAKING CHANGE: Requires Redis server to be available (configurable via env vars)

--- a/replybot/docker-compose.yml
+++ b/replybot/docker-compose.yml
@@ -5,7 +5,12 @@ services:
     volumes:
       - ./server:/usr/src/app/server
     env_file: .env
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     command: npm run dev
+    depends_on:
+      - redis
   botserver:
     image: nandanrao/gbv-botserver
     volumes:
@@ -14,4 +19,12 @@ services:
     ports:
       - "3000:80"
   redis:
-    image: redis
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+
+volumes:
+  redis_data:
