--- a/replybot/package.json
+++ b/replybot/package.json
@@ -25,6 +25,7 @@
     "cacheman": "^2.2.1",
     "chrono-node": "^1.3.11",
     "farmhash": "^3.0.0",
+    "ioredis": "^5.3.2",
     "js-yaml": "^3.14.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
